@@ -3,14 +3,13 @@ package dao;
 import model.User;
 import util.DBConnection;
 import util.PasswordUtil;
+import util.VietnameseSearchUtil;
 
 import java.sql.*;
-import java.text.Normalizer;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Locale;
 
 public class UserDAO {
 
@@ -288,96 +287,36 @@ public class UserDAO {
         }
         return false;
     }
-    public List<User> searchEmployeesByKeyword(List<User> employees, String keyword) {
-        boolean accentSensitive = containsVietnameseDiacritics(keyword);
-        String normalizedKeyword = normalizeSearchText(keyword, accentSensitive);
-        if (normalizedKeyword.isEmpty()) {
-            return employees;
-        }
-
-        String[] searchTerms = normalizedKeyword.split(" ");
-        List<User> result = new ArrayList<>();
-        for (User user : employees) {
-            String searchableText = normalizeSearchText(String.join(" ",
-                    valueOrEmpty(user.getFullName()),
-                    valueOrEmpty(user.getEmail()),
-                    valueOrEmpty(user.getPhone()),
-                    valueOrEmpty(user.getPositionName())
-            ), accentSensitive);
-
-            boolean matchesAllTerms = true;
-            for (String term : searchTerms) {
-                if (!searchableText.contains(term)) {
-                    matchesAllTerms = false;
-                    break;
-                }
-            }
-            if (matchesAllTerms) {
-                result.add(user);
-            }
-        }
-        return result;
-    }
-
     private List<User> searchDepartmentEmployeesByNameOrEmail(List<User> employees, String keyword) {
-        boolean accentSensitive = containsVietnameseDiacritics(keyword);
-        String normalizedKeyword = normalizeSearchText(keyword, accentSensitive);
-        if (normalizedKeyword.isEmpty()) {
-            return employees;
-        }
-
-        String[] searchTerms = normalizedKeyword.split(" ");
         List<User> result = new ArrayList<>();
         for (User user : employees) {
-            String searchableText = normalizeSearchText(String.join(" ",
-                    valueOrEmpty(user.getFullName()),
-                    valueOrEmpty(user.getEmail())
-            ), accentSensitive);
-
-            boolean matchesAllTerms = true;
-            for (String term : searchTerms) {
-                if (!searchableText.contains(term)) {
-                    matchesAllTerms = false;
-                    break;
-                }
-            }
-            if (matchesAllTerms) {
+            if (VietnameseSearchUtil.matchesPerson(user.getFullName(), user.getEmail(), null, keyword)) {
                 result.add(user);
             }
         }
         return result;
     }
 
-    private String normalizeSearchText(String value, boolean preserveDiacritics) {
-        if (value == null || value.trim().isEmpty()) {
-            return "";
+    public List<Integer> findUserIdsMatchingPersonSearch(String keyword) {
+        List<Integer> userIds = new ArrayList<>();
+        if (keyword == null || keyword.isBlank()) {
+            return userIds;
         }
 
-        String normalized = value;
-        if (!preserveDiacritics) {
-            normalized = Normalizer.normalize(normalized, Normalizer.Form.NFD)
-                    .replaceAll("\\p{M}+", "")
-                    .replace('đ', 'd')
-                    .replace('Đ', 'D');
+        String sql = "SELECT id, full_name, email, employee_code FROM users";
+        try (Connection conn = DBConnection.getConnection();
+             PreparedStatement ps = conn.prepareStatement(sql);
+             ResultSet rs = ps.executeQuery()) {
+            while (rs.next()) {
+                if (VietnameseSearchUtil.matchesPerson(rs.getString("full_name"),
+                        rs.getString("email"), rs.getString("employee_code"), keyword)) {
+                    userIds.add(rs.getInt("id"));
+                }
+            }
+        } catch (SQLException e) {
+            e.printStackTrace();
         }
-        normalized = normalized.toLowerCase(Locale.ROOT);
-        return normalized.trim().replaceAll("\\s+", " ");
-    }
-
-    private boolean containsVietnameseDiacritics(String value) {
-        if (value == null || value.isEmpty()) {
-            return false;
-        }
-
-        String withoutDiacritics = Normalizer.normalize(value, Normalizer.Form.NFD)
-                .replaceAll("\\p{M}+", "")
-                .replace('đ', 'd')
-                .replace('Đ', 'D');
-        return !value.equals(withoutDiacritics);
-    }
-
-    private String valueOrEmpty(String value) {
-        return value == null ? "" : value;
+        return userIds;
     }
 
     public List<User> filterEmployeesByStatus(List<User> employees, String status) {
@@ -505,37 +444,6 @@ public class UserDAO {
              ResultSet rs = ps.executeQuery()) {
             while (rs.next()) {
                 users.add(mapResultSetToUser(rs));
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return users;
-    }
-
-    public List<User> searchUsers(String keyword) {
-        List<User> users = new ArrayList<>();
-        String sql = """
-        SELECT u.*, r.name AS role_name
-        FROM users u
-        JOIN roles r ON u.role_id = r.id
-        WHERE (u.full_name LIKE ?
-               OR u.email LIKE ?
-               OR u.phone LIKE ?
-               OR r.name LIKE ?)
-          AND r.name NOT IN ('SYSTEM ADMIN', 'BUSINESS ADMIN')
-        ORDER BY u.id ASC
-        """;
-        try (Connection conn = DBConnection.getConnection();
-             PreparedStatement ps = conn.prepareStatement(sql)) {
-            String searchKeyword = "%" + keyword + "%";
-            ps.setString(1, searchKeyword);
-            ps.setString(2, searchKeyword);
-            ps.setString(3, searchKeyword);
-            ps.setString(4, searchKeyword);
-            try (ResultSet rs = ps.executeQuery()) {
-                while (rs.next()) {
-                    users.add(mapResultSetToUser(rs));
-                }
             }
         } catch (Exception e) {
             e.printStackTrace();
